tests/snapshots/text_objects_test__multiple_quoted_strings.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
"first" and ["]second" and "third"
