tests/snapshots/text_objects_test__nested_brackets.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
arr[[]nested[index]]
