tests/snapshots/text_objects_test__text_object_at_eol.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
wor[d]
