tests/snapshots/text_objects_test__visual_aw.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:6
Lines: 1

Buffer:
hello [w]orld test
