tests/snapshots/text_objects_test__viw_visual_inner_word.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:12
Lines: 1

Buffer:
hello world [t]est
