tests/snapshots/text_objects_test__y3aw_yank_three_words.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:4
Lines: 1

Buffer:
ow$p[n]e two three four five
